--- a/lillja-farm-app/styles/Contact.module.css
+++ b/lillja-farm-app/styles/Contact.module.css
@@ -1,30 +1,29 @@
 /* Contact Page Styles */
 
 #contact {
-    background-color: #F7FAFC;
-    border-radius: 0.5rem;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
-    padding: 2rem;
-  }
-  
-  .contactBox {
-    max-width: 700px;
-    margin: 0 auto;
-  }
-  
-  .contactTitle {
-    text-align: left;
-  }
-  
-  .contactText {
-    line-height: 1.5;
-  }
-  
-  .contactPhone {
-    color: #2563EB;
-  }
-  
-  .contactAddress {
-    font-weight: bold;
-  }
-  
+  background-color: #f7fafc;
+  border-radius: 0.5rem;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  padding: 2rem;
+}
+
+.contactBox {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.contactTitle {
+  text-align: left;
+}
+
+.contactText {
+  line-height: 1.5;
+}
+
+.contactPhone {
+  color: #2563eb;
+}
+
+.contactAddress {
+  font-weight: bold;
+}
